--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
-    <string name="app_name">Uncle_Bob</string>
+    <string name="app_name">Пицерия Uncle Bob</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="pizza_shop_name">Uncle Bob</string>
+
+    <string name="pizza_shop_default_city">Казань</string>
+    <string name="pizza_shop_greeting">Доставка вкусной пиццы в Казани</string>
 </resources>
