--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,22 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_title_communicate">Обратная связь</string>
+
+
+    <string name="navigation_drawer_option_menu">Меню</string>
+    <string name="navigation_drawer_option_sales">Акции</string>
+    <string name="navigation_drawer_option_basket">Корзина</string>
+    <string name="navigation_drawer_option_account">Аккаунт</string>
+    <string name="navigation_drawer_option_history">История заказов</string>
+    <string name="navigation_drawer_option_about">О компании</string>
+    <string name="navigation_drawer_option_call">Позвонить нам</string>
 
     <string name="action_settings">Settings</string>
     <string name="pizza_shop_name">Uncle Bob</string>
 
     <string name="pizza_shop_default_city">Казань</string>
     <string name="pizza_shop_greeting">Доставка вкусной пиццы в Казани</string>
+
+
 </resources>
