Quickly brought conflicts to the guidelines
By the way, where are these guidelines? :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,18 @@
 <resources>
     <string name="app_name">Uncle Bob</string>
     <string name="menu_header_name">Пицерия Uncle Bob</string>
+	
+	
     <string name="pizza_shop_name">Uncle Bob</string>
     <string name="pizza_shop_greeting">Доставка вкусной пиццы в Казани</string>
-
     <string name="pizza_shop_default_city">Казань</string>
-
-    <string name="pizza_shop_contacts">Контакты</string>
-    <string name="pizza_shop_call_now">Позвонить нам</string>
     <string name="pizza_shop_tel">89033071935</string>
 
-
-
+	
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="navigation_drawer_title_communicate">Обратная связь</string>
-
-
+    <string name="navigation_drawer_contacts">Контакты</string>
+	
     <string name="navigation_drawer_option_menu">Меню</string>
     <string name="navigation_drawer_option_sales">Акции</string>
     <string name="navigation_drawer_option_basket">Корзина</string>
@@ -25,5 +21,6 @@
     <string name="navigation_drawer_option_about">О компании</string>
     <string name="navigation_drawer_option_call">Позвонить нам</string>
 
+	
     <string name="action_settings">Settings</string>
 </resources>
