--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,8 @@
     <string name="category_refreshments">Закуски</string>
     <string name="category_salads">Салаты</string>
     <string name="category_drinks">Напитки</string>
+
     <string name="title_activity_basket">Корзина</string>
+    <string name="title_activity_details">REPORT AS A BUG</string>
+
 </resources>
