some refactor done && removed trash from project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,12 @@
     <string name="pizza_shop_greeting">Доставка вкусной пиццы в Казани</string>
     <string name="pizza_shop_default_city">Казань</string>
     <string name="pizza_shop_tel">89033071935</string>
-    <string name="delivery_info">Пиццерия "Uncle Bob" осуществляет доставку пиццы с 11.00 до 22.00.\n
-При заказе от 500р. доставка бесплатно в Приволжский, Советский, Вахитовский, Ново-Савиновский районы.\n
-        В другие районы доставка 100р.\n
-При заказе до 500р. доставка будет стоить - 100р.</string>
+    <string name="delivery_info">
+        \tПиццерия "Uncle Bob" осуществляет доставку пиццы с 11.00 до 22.00.\n
+        \tПри заказе от 500р. доставка бесплатно в Приволжский, Советский, Вахитовский, Ново-Савиновский районы.\n
+        \tВ другие районы доставка 100р.\n
+        \tПри заказе до 500р. доставка будет стоить - 100р.
+    </string>
 
     <!--Navigation Drawer-->
     <string name="navigation_drawer_option_menu">Меню</string>
