--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,10 @@
     <string name="basket_empty_message_part2">Но вы можете что-нибудь в неё положить!</string>
     <string name="basket_empty_goto_pizza">Посмотреть на пиццы</string>
 
+    <string name="user_name">Имя</string>
+    <string name="user_phone_number">Телефон</string>
+    <string name="user_delivery_address">Адрес доставки</string>
+    <string name="user_save_data">Сохранить данные</string>
+
 
 </resources>
