Added a bit more clear message on order accept.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,11 +69,11 @@
     <string name="basket_empty_message_part1">Корзина пуста! :(</string>
     <string name="basket_empty_message_part2">Но вы можете что-нибудь в неё положить!</string>
     <string name="basket_empty_goto_pizza">Посмотреть на пиццы</string>
+    <string name="basket_order_accepted">Ваш заказ принят!</string>
 
     <string name="user_name">Имя</string>
     <string name="user_phone_number">Телефон</string>
     <string name="user_delivery_address">Адрес доставки</string>
     <string name="user_save_data">Сохранить данные</string>
-
 
 </resources>
